# ChangeLog for catalyst
# Copyright 2002-2009 Gentoo Foundation; 2008-2009 Various authors (see AUTHORS)
# Distributed under the GPL v2

  09 Jan 2009; Andrew Gaffney <agaffney@gentoo.org> TODO:
  Add note about metadata_overlay being default in 2.1.6

  09 Jan 2009; Chris Gianelloni <wolf31o2@wolf31o2.org> AUTHORS:
  Updated the AUTHORS section and the header for the ChangeLog, to reflect
  that individual authors now retain their copyright to code they submit.

  08 Jan 2009; Chris Gianelloni <wolf31o2@wolf31o2.org> TODO:
  Rewrote TODO to make it clearer and added a ton of new items to it.

  02 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/generic_stage_target.py:
  screw you python...hard

  02 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/generic_stage_target.py:
  Disable removal of 'target_path' when build starts

  26 Dec 2008; Andrew Gaffney <agaffney@gentoo.org>
  modules/generic_stage_target.py:
  Apply patch from armin76 to actually make use of the busybox_config value
  in the spec

  24 Dec 2008; Andrew Gaffney <agaffney@gentoo.org>
  targets/netboot2/netboot2-controller.sh, targets/support/kmerge.sh:
  Add support for gk's --busybox-config= option

  23 Dec 2008; Andrew Gaffney <agaffney@gentoo.org>
  modules/generic_stage_target.py:
  Missing / before 'iso'

  22 Dec 2008; Andrew Gaffney <agaffney@gentoo.org>
  modules/snapshot_target.py:
  Add support for purging to snapshot target

  21 Dec 2008; Andrew Gaffney <agaffney@gentoo.org> TODO:
  Add mix-in cdtar idea to TODO

  21 Dec 2008; Andrew Gaffney <agaffney@gentoo.org>
  -livecd/cdtar/isolinux-3.09-cdtar.tar.bz2,
  -livecd/cdtar/isolinux-3.09-memtest86+-cdtar.tar.bz2:
  Remove old isolinux-3.09 cdtar files

  21 Dec 2008; Andrew Gaffney <agaffney@gentoo.org>
  +livecd/cdtar/isolinux-3.72-cdtar.tar.bz2,
  +livecd/cdtar/isolinux-3.72-memtest86+-cdtar.tar.bz2:
  Update cdtar files to isolinux-3.72 and latest memtest86+-2.10
