@@ -2,6 +2,10 @@
 # Copyright 2002-2009 Gentoo Foundation; 2008-2009 Various authors (see AUTHORS)
 # Distributed under the GPL v2
 
+  13 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
+  modules/catalyst_support.py:
+  Try to import portage.util before portage_util
+
   09 Jan 2009; Andrew Gaffney <agaffney@gentoo.org> TODO:
   Add note about metadata_overlay being default in 2.1.6
 
